assets/css/app.css
/* ... */
.btn {
  z-index: 10;
  position: relative;
  font-family: "Montserrat";
  font-size: 10px;
  padding: 15px 30px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: uppercase;
  letter-spacing: 2px;
  overflow: hidden;
  transition: all 0.5s cubic-bezier(1, 0.5, 0.8, 1);
}

.btn:focus {
  color: inherit;
}

.btn-right-icon i {
  margin-left: 15px;
  font-size: 1.5em;
}

.btn:before,
.btn:after {
  position: absolute;
  z-index: -1;
  content: '';
  width: 120%;
  height: 120%;
  left: 0;
  top: 0;
  transition: all 0.5s ease-out;
}

.btn:before {
  -webkit-transform: translateX(-100%) rotate(45deg);
  transform: translateX(-100%) rotate(45deg);
}

.btn:after {
  -webkit-transform: translateX(100%) rotate(45deg);
  transform: translateX(100%) rotate(45deg);
}

.btn:hover:before {
  -webkit-transform: translateX(-50%) rotate(45deg) scale(4);
  transform: translateX(-50%) rotate(45deg) scale(4);
}

.btn:hover:after {
  -webkit-transform: translateX(50%) rotate(45deg) scale(4);
  transform: translateX(50%) rotate(45deg) scale(4);
}

.btn-black {
  background: transparent;
  border-color: #000000;
  color: #000000;
}

.btn-black:before,
.btn-black:after {
  background: #000000;
}

.btn-black:hover {
  color: #ffffff;
}

.btn-white {
  background: transparent;
  border-color: #ffffff;
  color: #ffffff;
}

.btn-white:before,
.btn-white:after {
  background: #ffffff;
}

.btn-white:hover {
  color: #000000;
}

.btn-disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.buttons-group {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.buttons-group-center {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.buttons-group a {
  margin: 0 5px;
}

.buttons-group a:first-of-type {
  margin: 0 5px 0 0;
}

.buttons-group a:last-of-type {
  margin: 0 0 0 5px;
}

@media all and (min-width: 1200px) {
  .container {
    width: 1200px;
  }
}

@media all and (max-width: 767px) {
  .flex-row {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-left: 0px;
    margin-right: 0px;
  }

  .flex-row > div {
    margin-bottom: 40px;
  }

  .flex-row > div:last-of-type {
    margin-bottom: 0px;
  }
}

/**
 * PARTICLES
 */

#particles-js {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 30;
}

/**
 * HELPERS
 */

.mt-1 {
  margin-top: 15px;
}

.mt-2 {
  margin-top: 30px;
}

.mt-3 {
  margin-top: 45px;
}

.mb-1 {
  margin-bottom: 15px;
}

.mb-2 {
  margin-bottom: 30px;
}

.mb-3 {
  margin-bottom: 45px;
}

.ml-1 {
  margin-left: 15px;
}

.ml-2 {
  margin-left: 30px;
}

.ml-3 {
  margin-left: 45px;
}

.mr-1 {
  margin-right: 15px;
}

.mr-2 {
  margin-right: 30px;
}

.mr-3 {
  margin-right: 45px;
}

.pt-1 {
  padding-top: 15px;
}

.pt-2 {
  padding-top: 30px;
}

.pt-3 {
  padding-top: 45px;
}

.pb-1 {
  padding-bottom: 15px;
}

.pb-2 {
  padding-bottom: 30px;
}

.pb-3 {
  padding-bottom: 45px;
}

.pl-1 {
  padding-left: 15px;
}

.pl-2 {
  padding-left: 30px;
}

.pl-3 {
  padding-left: 45px;
}

.pr-1 {
  padding-right: 15px;
}

.pr-2 {
  padding-right: 30px;
}

.pr-3 {
  padding-right: 45px;
}

.c-gray {
  color: #555555;
}

.c-light {
  color: #C9C9C9;
}

.c-silver {
  color: #888888;
}

@media all and (max-width: 767px) {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    letter-spacing: 1px;
  }

  h1 {
    font-size: 26px;
  }

  h2 {
    font-size: 24px;
  }

  h4 {
    font-size: 16px;
  }

  blockquote {
    font-size: 16px;
  }
}

/**
 * NAVIGATION
 */

.Navigation {
  transition: width 2s ease-in-out;
  width: 100%;
}

.Navigation__bar {
  width: 100%;
  z-index: 1000;
  padding: 12px 30px;
  min-height: 0 !important;
  height: auto;
  background: transparent;
  border: none;
  box-shadow: none;
  transition: all 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
}

.Navigation__bar .navbar-nav li a {
  font-family: "Montserrat";
  letter-spacing: 2px;
  transition: all 0.3s ease-in-out;
  color: #ffffff;
  text-transform: uppercase;
  font-size: 10px;
  position: relative;
  padding: 15px 10px;
  margin-left: 10px;
}

.Navigation__bar .navbar-nav li a:after {
  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
  content: '';
  width: 0px;
  height: 1px;
  background: #ffffff;
  position: absolute;
  bottom: 8px;
  right: 0px;
}

.Navigation__bar .navbar-nav li a:before {
  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
  content: '';
  width: 0px;
  height: 1px;
  background: #ffffff;
  position: absolute;
  top: 8px;
  left: 0;
}

.Navigation__bar .navbar-nav li a:hover {
  background-color: transparent;
  color: #C9C9C9;
}

.Navigation__bar .navbar-nav li a:hover:after {
  width: 40px;
  right: calc(50% - 20px);
}

.Navigation__bar .navbar-nav li.active a:after {
  width: 20px;
  right: calc(50% - 10px);
}

.Navigation__bar .navbar-nav li.active a:before {
  width: 20px;
  left: calc(50% - 10px);
}

.Navigation__bar .navbar-nav li a:focus,
.Navigation__bar .navbar-nav li a:active {
  background-color: transparent;
}

.Navigation__bar .navbar-brand {
  padding: 0;
}

.Navigation--scrolled .Navigation__bar {
  background: #000000;
  padding-top: 20px;
  padding-bottom: 20px;
  min-height: auto;
}

.Navigation:not(.Navigation--scrolled) .Navigation__bar {
  padding-top: 15px;
  padding-bottom: 15px;
  min-height: auto;
  background: transparent;
}

.Navigation__mobile-menu {
  display: none;
}
/* ... */

